--- a/src/components/navbar/headerBar.astro
+++ b/src/components/navbar/headerBar.astro
@@ -14,7 +14,7 @@ import ProjectsDropdown from './ProjectsDropdown.astro';
 
 <Nav class='d-flex justify-content-evenly'>
     <div>
-        <Nav.Item text='Home' href='https://protectoravillena.com/' />
+        <Nav.Item text='Home' href='/home' />
     </div>
         <Nav.Item>
             <ProjectsDropdown />
