--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,9 @@
 import 'bootstrap/dist/css/bootstrap.css'
 import { Breadcrumb } from 'astro-bootstrap';
 
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
 ---
 
 <!doctype html>
@@ -12,7 +15,7 @@ import { Breadcrumb } from 'astro-bootstrap';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Shyne Sogorb</title>
 		<!-- add bootstrap -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 		<!-- add bootstrap js -->
@@ -21,7 +24,13 @@ import { Breadcrumb } from 'astro-bootstrap';
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
 	<body>
-		<slot />
+		<div class="page bg-dark bg-opacity-75">
+        <Header></Header>
+        <main class="">
+			<slot />
+        </main>
+        <Footer class:list={["m-0"]}></Footer>
+    	</div>
 	</body>
 </html>
 
