--- a/src/components/documentation/DocVariable.astro
+++ b/src/components/documentation/DocVariable.astro
@@ -2,7 +2,6 @@
 import DocParameters from "./DocParameters.astro";
 import DocMacro from "./DocMacro.astro"
 
-
 const {variable} = Astro.props;
 const {comment, umacro} = variable;
 
@@ -18,3 +17,10 @@ const variableLine = variable.type + " " + variable.name
         <p>Name {variable.name}</p>
     </div>
 </div>
+
+<script>
+    var url = new URL(window.location.href);
+    var c = url.searchParams.toString();
+    console.log(c);
+    
+</script>
