--- a/src/components/documentation/DocClass.astro
+++ b/src/components/documentation/DocClass.astro
@@ -1,36 +1,73 @@
 ---
-import DocComment from "./DocComment.astro"
-import DocFunction from "./DocFunction.astro"
-import DocVariable from "./DocVariable.astro"
-import { Accordion } from 'astro-bootstrap';
+import DocComment from "./DocComment.astro";
+import DocFunction from "./DocFunction.astro";
+import DocVariable from "./DocVariable.astro";
+import { Accordion } from "astro-bootstrap";
 
-const {classData} = Astro.props
+const { classData, classId, parentId } = Astro.props;
+const functionId = parentId + "Functions";
+const functionAccordion = classData.name + "functionAccordion";
 
-//variables
+const variableId = parentId + "Variables";
+const variableAccordion = classData.name + "variableAccordion";
+
 //umacro
-
 ---
 
 <Accordion.Item>
-    <Accordion.Header parent={classData.name} index={0}>{classData.name}</Accordion.Header>
-          <Accordion.Body parent={classData.name} index={0} show>
-            <div style="background-color: antiquewhite;">
-                <DocComment comment={classData.comment}></DocComment>
-                {classData.name}
-                
-                {classData.functions.map((funct: any)=>(
-                    <div style="background-color: aqua;">
-                        <DocFunction {funct}></DocFunction>
-                    </div>
-                ))}
-                    
-                {classData.variables.map((variable: any)=>(
-                    <div style="background-color: brown;">
-                    <DocVariable {variable}></DocVariable>
-                    </div>
-                ))}
-            </div>
-          </Accordion.Body>
-</Accordion.Item>
-    
+    <Accordion.Header parent={parentId} index={classId}
+        >{classData.name}</Accordion.Header
+    >
+    <Accordion.Body parent={parentId} index={classId}>
+        <DocComment comment={classData.comment} />
+        {classData.name}
 
+        <Accordion id={functionAccordion}>
+            <Accordion.Item>
+                <Accordion.Header parent={functionAccordion} index={0}
+                    >Functions</Accordion.Header
+                >
+                <Accordion.Body parent={functionAccordion} index={0} show>
+                    <Accordion id={functionId}>
+                        {
+                            classData.functions.map((funct: any, i: number) => (
+                                <div>
+                                    <DocFunction
+                                        {funct}
+                                        parentId={functionId}
+                                        functionId={i}
+                                    />
+                                </div>
+                            ))
+                        }
+                    </Accordion>
+                </Accordion.Body>
+            </Accordion.Item>
+        </Accordion>
+
+        <Accordion id={variableAccordion}>
+            <Accordion.Item>
+                <Accordion.Header parent={variableAccordion} index={0}
+                    >Variables</Accordion.Header
+                >
+                <Accordion.Body parent={variableAccordion} index={0} show>
+                    <Accordion id={variableId}>
+                        {
+                            classData.variables.map(
+                                (variable: any, i: number) => (
+                                    <div>
+                                        <DocVariable
+                                            {variable}
+                                            parentId={variableId}
+                                            variableId={i}
+                                        />
+                                    </div>
+                                ),
+                            )
+                        }
+                    </Accordion>
+                </Accordion.Body>
+            </Accordion.Item>
+        </Accordion>
+    </Accordion.Body>
+</Accordion.Item>
