--- a/src/components/documentation/DocFunction.astro
+++ b/src/components/documentation/DocFunction.astro
@@ -1,23 +1,30 @@
 ---
 import DocParameters from "./DocParameters.astro";
-import DocMacro from "./DocMacro.astro"
+import DocMacro from "./DocMacro.astro";
+import { Accordion } from "astro-bootstrap";
 
-const {funct} = Astro.props;
-const {comment, umacro} = funct;
+const { funct, functionId, parentId } = Astro.props;
+const { comment, umacro } = funct;
 
-const functLine = funct.return_type + " " + funct.name + "(" + funct.parameters + ")"
-
+const functLine = funct.return_type + " " + funct.name + "(" + funct.parameters + ")";
 ---
 
-<div>
-    {functLine}
-    <DocMacro macro={umacro}></DocMacro>
-    <div>
-        <p>{comment.description}</p>
-        <p>Name {funct.name}</p>
-    </div>
-    <DocParameters parameters={funct.parameters} comments={comment.parameters}></DocParameters>
-    {funct.return_type && funct.return_type != "void" && (
-        <p>{funct.return_type} {comment.return_type}</p>
-    )}
-</div>
+<Accordion.Item>
+    <Accordion.Header parent={parentId} index={functionId}>{funct.name}</Accordion.Header>
+    <Accordion.Body parent={parentId} index={functionId}>
+        {functLine}
+        <DocMacro macro={umacro} />
+        <div>
+            <p>{comment.description}</p>
+            <p>Name {funct.name}</p>
+        </div>
+        <DocParameters parameters={funct.parameters} comments={comment.parameters}/>
+        {
+            funct.return_type && funct.return_type != "void" && (
+                <p>
+                {funct.return_type} {comment.return_type}
+            </p>
+        )
+    }
+    </Accordion.Body>
+</Accordion.Item>
