--- a/src/pages/acs.astro
+++ b/src/pages/acs.astro
@@ -1,7 +1,7 @@
 ---
+import DocumentationPage from "../components/DocumentationPage.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-
 </Layout>
