--- a/src/pages/was.astro
+++ b/src/pages/was.astro
@@ -1,7 +1,8 @@
 ---
+import DocumentationPage from "../components/DocumentationPage.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-
+    <DocumentationPage />
 </Layout>
