--- a/src/pages/was.astro
+++ b/src/pages/was.astro
@@ -5,4 +5,21 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
     <DocumentationPage />
+    <div>
+        <h3>Attributions</h3>
+        <div>
+            <p>
+                <a href="https://www.flaticon.com/free-icons/gun" title="gun icons">Gun icons created by Freepik - Flaticon</a>
+            </p>
+            <p>
+                <a href="https://www.flaticon.com/free-icons/technology" title="technology icons">Technology icons created by Freepik - Flaticon</a>
+            </p>
+        </div>
+    </div>
 </Layout>
+
+<style>
+    * a{
+        color: black;
+    }
+</style>
