--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
 import FooterSection from "./footer/FooterSection.astro";
 
-import MyProjects from "../../public/JSON/projects.json";
-import MySocials from "../../public/JSON/social.json"
+import MyProjects from "/src/JSON/projects.json";
+import MySocials from "/src/JSON/social.json"
 
 ---
 
