--- a/src/pages/was/documentation.astro
+++ b/src/pages/was/documentation.astro
@@ -1,7 +1,7 @@
 ---
 import DocClass from "../../components/documentation/DocClass.astro"
 import Layout from "../../layouts/Layout.astro";
-import data from "/public/JSON/was.documentation.json"
+import data from "/src/JSON/was.documentation.json"
 
 import { Accordion } from 'astro-bootstrap';
 const id = 'manualAccordion'
